Bug 195670 - "move folders" doesn't move the folders
Summary: "move folders" doesn't move the folders
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 196514 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-08 14:53 UTC by Jiri Palecek
Modified: 2009-06-16 02:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix of bug - to apply in kdepim/kmail/ (827 bytes, patch)
2009-06-15 11:38 UTC, Frank Niethardt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jiri Palecek 2009-06-08 14:53:14 UTC
Version:            (using KDE 4.2.4)
Installed from:    Debian testing/unstable Packages

When I create a folder under local folder, select "Move folder" form its context menu and move it under a different folder, the folder is not moved. It is copied to the destination, but the original is not deleted.
Comment 1 Frank Niethardt 2009-06-15 11:38:03 UTC
Created attachment 34544 [details]
Fix of bug - to apply in kdepim/kmail/
Comment 2 Jaime Torres 2009-06-15 12:15:53 UTC
*** Bug 196514 has been marked as a duplicate of this bug. ***
Comment 3 Unknown 2009-06-15 18:55:57 UTC
I purpose this correction:
in the file mainfolderview.cpp in the function folderToPopupMenu, change the line 246 from:
Util::reconnectSignalSlotPair( menu, SIGNAL( triggered( QAction * ) ), target, SLOT( slotCopySelectedFoldersToFolder( QAction* ) ) );

to:
Util::reconnectSignalSlotPair( menu, SIGNAL( triggered( QAction * ) ), target, SLOT( slotMoveSelectedFoldersToFolder( QAction* ) ) );

The function "Move" is defined at line 262 but never used.
Comment 4 Allen Winter 2009-06-16 02:12:03 UTC
SVN commit 982493 by winterz:

Commit Frank's patch for "move folders" doesn't move the folders 

http://reviewboard.kde.org/r/834

MERGE: e4
BUG: 195670


 M  +6 -6      mainfolderview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=982493