Commit Frank's patch for "move folders" doesn't move the folders

http://reviewboard.kde.org/r/834

MERGE: e4
BUG: 195670

svn path=/trunk/KDE/kdepim/; revision=982493